[project]
name = "pyspark-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Panuta",email = "daniel.panuta@endava.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyspark (>=4.0.0,<5.0.0)",
    "delta-spark (>=4.0.0,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.3"
jupyterlab = "^4.4.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
